--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
                 </div>
 
                 <!-- <label for="navigation-header" class="bars-menu">  -->
-                    <i class="fa-solid fa-bars bar-menu"></i>
+                <i class="fa-solid fa-bars bar-menu"></i>
                 <!-- </label> -->
                 <!-- <input type="checkbox" id="navigation-header" class="nav_input"> -->
     
@@ -46,12 +46,19 @@
                                 Menu
                                 <div class="main-bar-aside">
                                     <div class="wrapper">
-                                    <main id="background-bar" class="contain-bar">
+                                        <main id="info-bar" class="contain-bar">
+                                            <section class="bar-top">
+                                                <h1>Experiencias</h1>
+                                                <div class="wrapper">
+                                                    
+                                                </div>
+                                            </section>
+                                            <section class="bar-bottom"></section>
+                                        </main>
+                                        <aside>
                                         
-                                    </main>
-                                    <aside>
-    
-                                    </aside> 
+                                        </aside>
+                                    </div> 
                                 </div>
                             </div>
                             </nav>     
