--- a/static/css/style.css
+++ b/static/css/style.css
@@ -50,22 +50,142 @@
 }
 
 body {
-    font-family: var(--merriweather-black-italic);
-    background-color: #fff;
-    font-size: 1.1em;
+  font-family: var(--merriweather-black-italic);
+  background-color: #fff;
+  font-size: 1.1em;
 }
 
-.container-header{background-color: rgb(62, 11, 99);}
+a {color: inherit; text-decoration: none;}
+
+.wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+/* ------------ HEADER -_-------------------------------- */
+
+.container-header{background-color: rgb(62, 11, 99); padding: 1em; } 
 .container-header > .wrapper {display: flex; justify-content: space-around;}
-.navigation-header {display: none;}
 .title_bank_principal { margin-left: .3em; font-size: 2.34em; color: #fff;}
 .bar-menu {font-size: 2em; color: #fff;}
 .title-header {display: flex; align-items: center;}
 
+
+/* Menu Desplegable */
+
+.navigation-header {
+  opacity: 0;
+  visibility: hidden;
+  display: inline-block;
+  background-color: #fff;
+  width: 100%;
+  height: 100%;
+  border-bottom: #000 solid 2px;
+  position: absolute;
+  z-index: 1;
+  top: 11%;
+  
+}
+
+.navigation-header.visible {
+  opacity: 1;
+  visibility: visible;
+}
+
 .languaje-top , .Buttoms-Signin_Login , .header-bottom{ display: flex;}
+
+.header-bottom {
+  margin: 1.16em 0 1em;
+  justify-content: center;
+}
+
+.Buttoms-Signin_Login { gap: 30px; }
+
+.btn-buttom-bar {
+  border: none;
+  border-radius: 10px;
+  padding: 1em;
+  background-color: #3d40da;
+  color: #fff;
+  cursor: pointer;
+}
+
+.list-options {
+  display: flex;
+  flex-direction: column;
+  margin: 2em 0;
+  gap: 1px;
+}
+
+.links-bars a{
+  display: inline-block;
+  background-color: #3d40da;
+  width: 100%;
+  padding: 1em;
+}
+
+.bars-carrusel {
+  position: relative;
+  overflow: hidden;
+}
+
+.header_nav_bars {
+  margin-top: 3em;
+}
+
+.bar-top {margin: 0 1em 2em; }
+
+.title-bar-nav{  font-size: 25px; text-align: center; }
 
 .languaje-top {justify-content: center; margin-left: -1.8em;}
 
+.min-carrusel {
+  display: flex;
+  gap: 30px;
+  width: 100%;
+  margin: 0 auto;
+}
 
+.icon-bar-carrusel {
+  font-size: 3em;
+  margin: 10px 0;
+  color: #000;
+}
+
+.min-bank-carrusel {
+  background-color: #2c2eb7;
+  width: 400px;
+  display: flex;
+  color: #fff;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1em 2em;
+}
+
+.txt-bars {
+  width: 113px;
+}
+/* ---------------- CARRUSEL ------------------------- */
+
+.carrusel-container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  max-width: 1100px;
+  position: relative;
+  overflow: hidden;
+}
+
+.carrusel-bank {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
+.about-bank-carrusel {
+  margin: 0 20px;
+}
 
 
