--- a/templates/index.html
+++ b/templates/index.html
@@ -19,13 +19,97 @@
                     <i class="fa-solid fa-building-columns"></i> <!-- aqui debe ir icono del banco, se pondra un bank para emular -->
                     <h1 class="title_bank_principal">Salame Bank</h1>
                 </div>
+                
+                <button id="open-bar" class="open-main"><i class="fa-solid fa-bars bar-menu"></i></button>
+        
+                <nav class="navigation-header" id="nav-header">
+                    <button id="close-bar" class="close-main"><i class="fa-solid fa-xmark"></i></button>
+                    <div class="header-bottom">
+                        <ul class="Buttoms-Signin_Login">
+                            <li><a class="btn-buttom-bar registrer-btn" href="Login">Iniciar Sesion</a></li>
+                            <li><a class="btn-buttom-bar login-btn" href="Signin">Registrarse</a></li>
+                        </ul>
+                    </div>
 
-                <!-- <label for="navigation-header" class="bars-menu">  -->
-                <i class="fa-solid fa-bars bar-menu"></i>
-                <!-- </label> -->
-                <!-- <input type="checkbox" id="navigation-header" class="nav_input"> -->
-    
-                <nav class="navigation-header">
+                    <ul class="list-options">
+                        <li class="links-bars"><a href="#">Cuentas</a></li>
+                        <li class="links-bars"><a href="#">Seguros</a></li>
+                        <li class="links-bars"><a href="#">Hipotecas</a></li>
+                        <li class="links-bars"><a href="#">Depositos</a></li>
+                    </ul>
+
+                        <!-- OPCION DE MENU EXTENSO  -->
+                    <div class="header_nav_bars">
+                            <!-- Menu bar on mobile view -->
+                        <nav class="nav_menu">    
+                            <!----------------   MAIN BARS  ---------------------->
+                            <div class="main-bar-aside">
+                                <div class="wrapper">
+                                    <main id="info-bar" class="contain-bar">
+                                        <section class="bar-top">
+                                            <h1 class="title-bar-nav">Experiencias</h1>
+                                            <div class="wrapper bars-carrusel">
+                                                <button class="carrusel-arrow carrusel-prev" id="button-prev" data-button="button-prev"
+                                                onclick="app.processingButton(event)">
+                                                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-left"
+                                                        class="svg-inline--fa fa-chevron-left fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg"
+                                                        viewBox="0 0 320 512">
+                                                        <path fill="currentColor"
+                                                            d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z">
+                                                        </path>
+                                                    </svg>
+                                                </button>
+                                                <div class="min-carrusel">
+                                                   
+                                                     <!-- CARRUSEL -->
+                                                    <div class="min-bank-carrusel">
+                                                        <div class="icon-bars">
+                                                            <i class=" icon-bar-carrusel fa-solid fa-user"></i>
+                                                        </div>
+                                                        <div class="txt-bars">
+                                                            <p>Lorem ipsum dolor sit amet consectetur</p>
+                                                        </div>
+                                                    </div>
+                                                    <div class="min-bank-carrusel">
+                                                        <div class="icon-bars">
+                                                            <i class=" icon-bar-carrusel fa-solid fa-user"></i>
+                                                        </div>
+                                                        <div class="txt-bars">
+                                                            <p>Lorem ipsum dolor sit amet consectetur</p>
+                                                        </div>
+                                                    </div>
+                                                    <div class="min-bank-carrusel">
+                                                        <div class="icon-bars">
+                                                            <i class=" icon-bar-carrusel  fa-solid fa-user"></i>
+                                                        </div>
+                                                        <div class="txt-bars">
+                                                            <p>Lorem ipsum dolor sit amet consectetur</p>
+                                                        </div>
+                                                    </div>
+                                                    <div class="min-bank-carrusel">
+                                                        <div class="icon-bars">
+                                                            <i class=" icon-bar-carrusel fa-solid fa-user"></i>
+                                                        </div>
+                                                        <div class="txt-bars">
+                                                            <p>Lorem ipsum dolor sit amet consectetur</p>
+                                                        </div>
+                                                    </div>
+                                                </div> 
+                                            </div>
+                                        </section>
+                                        <section class="bar-bottom"></section>
+                                    </main>
+                                    <aside>
+                                    
+                                    </aside>
+                                </div> 
+                            </div>
+                            
+                        </nav>        
+                    </div>
+                    
+                    
+
                     <ul class="choose-languajes languaje-top">
                         <!-- BOTONES DE IDIOMAs -->
                         <li><a href="">EN</a></li>
@@ -33,59 +117,130 @@
                         <li><a href="">CAT</a></li>
                     </ul>
 
-                    <div class="header-bottom">
-                        <ul class="Buttoms-Signin_Login">
-                            <li><a href="Signin.html">Iniciar Sesion</a></li>
-                            <li><a href="Login.html">Registrarse</a></li>
-                        </ul>
-    
-                        <!-- OPCION DE MENU EXTENSO  -->
-                        <div class="header_nav_bars">
-                                <!-- Menu bar on mobile view -->
-                            <nav class="nav_menu">    
-                                Menu
-                                <div class="main-bar-aside">
-                                    <div class="wrapper">
-                                        <main id="info-bar" class="contain-bar">
-                                            <section class="bar-top">
-                                                <h1>Experiencias</h1>
-                                                <div class="wrapper">
-                                                    
-                                                </div>
-                                            </section>
-                                            <section class="bar-bottom"></section>
-                                        </main>
-                                        <aside>
-                                        
-                                        </aside>
-                                    </div> 
-                                </div>
-                            </div>
-                            </nav>     
-                        </div>
-                        <!-- MODO OSCURO -->
-                        <a href=""><i class="fa-solid fa-moon"></i></a>
-    
-                    </div>
+
+                    <!-- MODO OSCURO -->
+                    <a href=""><i class="fa-solid fa-moon"></i></a>
+
+
                 </nav>
             </div>
         </div>
     </header>
     <div class="hero-about">
-        <div class="wrapper">
-            <div class="carrusel-bank"></div>
-            <div class="carrusel-bank"></div>
-            <div class="carrusel-bank"></div>
-            <div class="carrusel-bank"></div>
+        <button class="carrusel-arrow carrusel-prev" id="button-prev" data-button="button-prev"
+            onclick="app.processingButton(event)">
+            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-left"
+                class="svg-inline--fa fa-chevron-left fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 320 512">
+                <path fill="currentColor"
+                    d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z">
+                </path>
+            </svg>
+        </button>
+
+        <div class="carrusel-container" id="carrusel-list">
+            
+            <div class="carrusel-bank">
+                <div class="image-carrusel">
+                    <picture>
+                        <img
+                        sizes="(max-width: 1000px) 100vw, 1000px"
+                        srcset="
+                        ../static/img/images-responsives/1_u9djo3_c_scale,w_200.jpg 200w,
+                        ../static/img/images-responsives/1_u9djo3_c_scale,w_461.jpg 461w,
+                        ../static/img/images-responsives/1_u9djo3_c_scale,w_618.jpg 618w,
+                        ../static/img/images-responsives/1_u9djo3_c_scale,w_640.jpg 640w"
+                        src="../static/img/1.jpg"
+                        alt="">
+                    </picture>
+                </div>
+                <div class="about-bank-carrusel">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae fugit animi in quos quia aut, modi, ipsa perferendis iure corrupti voluptatibus asperiores magni soluta omnis? Maiores mollitia quam est labore. dadadadadadadadadad</p>
+                </div>
+            </div>
+            <div class="carrusel-bank">
+                <picture>
+                    <img
+                    sizes="(max-width: 1000px) 100vw, 1000px"
+                    srcset="
+                    ../static/img/images-responsives/brooke-cagle-tLG2hcpITZE-unsplash_l5pjmd_c_scale,w_200.jpg 200w,
+                    ../static/img/images-responsives/brooke-cagle-tLG2hcpITZE-unsplash_l5pjmd_c_scale,w_641.jpg 641w,
+                    ../static/img/images-responsives/brooke-cagle-tLG2hcpITZE-unsplash_l5pjmd_c_scale,w_941.jpg 941w,
+                    ../static/img/images-responsives/brooke-cagle-tLG2hcpITZE-unsplash_l5pjmd_c_scale,w_1126.jpg 1126w,
+                    ../static/img/images-responsives/brooke-cagle-tLG2hcpITZE-unsplash_l5pjmd_c_scale,w_1323.jpg 1323w,
+                    ../static/img/images-responsives/brooke-cagle-tLG2hcpITZE-unsplash_l5pjmd_c_scale,w_1400.jpg 1400w"
+                    src="../static/img/brooke-cagle-tLG2hcpITZE-unsplash_l5pjmd_c_scale,w_1400.jpg"
+                    alt="">
+                </picture>
+                <div class="about-bank-carrusel">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae fugit animi in quos quia aut, modi, ipsa perferendis iure corrupti voluptatibus asperiores magni soluta omnis? Maiores mollitia quam est labore. dadadadadadaddadadddd</p>
+                </div>
+            </div>
+            <div class="carrusel-bank">
+                <div class="about-bank-carrusel">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae fugit animi in quos quia aut, modi, ipsa perferendis iure corrupti voluptatibus asperiores magni soluta omnis? Maiores mollitia quam est labore.</p>
+                </div>
+                <picture>
+                    <img src="" alt="carrussel salamebank">
+                </picture>
+            </div>
+            <div class="carrusel-bank">
+                <div class="about-bank-carrusel">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae fugit animi in quos quia aut, modi, ipsa perferendis iure corrupti voluptatibus asperiores magni soluta omnis? Maiores mollitia quam est labore.</p>
+                </div>
+                <picture>
+                    <img src="" alt="carrussel salamebank">
+                </picture>
+            </div>
         </div>
+        <button class="carrusel-arrow carrusel-next" id="button-next" data-button="button-next"
+        onclick="app.processingButton(event)">
+        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-right"
+            class="svg-inline--fa fa-chevron-right fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 320 512">
+            <path fill="currentColor"
+                d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z">
+            </path>
+        </svg>
+    </button>
     </div>
     <main id="main-landing_page">
-        
+        <section class="advantages-bank">
+            <div class="wrapper container-bank-advantages">
+                <h2>La Ventaja de estar con Nosotros</h2>
+                <div class="wrapper-advantages">
+                    <div class="image-reference">
+                        <!-- <img src="https://img.freepik.com/foto-gratis/hombre-sonriente-telefono-movil_23-2148531038.jpg" alt=""> -->
+                    </div>
+                    <div class="text-advantages">
+                        <i></i>
+                        <h2></h2>
+                        <p></p>
+                    </div>
+                    <div class="text-advantages">
+                        <i></i>
+                        <h2></h2>
+                        <p></p>
+                    </div>
+                    <div class="text-advantages">
+                        <i></i>
+                        <h2></h2>
+                        <p></p>
+                    </div>
+                    <div class="text-advantages">
+                        <i></i>
+                        <h2></h2>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer id="footer about_bank">
 
     </footer>
-
+    <script src="../static/js/barba.min.js"></script>
+    <script src="../static/js/script.js"></script>
 </body>
 </html>
