--- a/templates/Login.html
+++ b/templates/Login.html
@@ -17,7 +17,7 @@
     <div data-barba="container" data-barba-namespace="home">
         <div class="container" id="container">
             <div class="form-container signin">
-                <form action="" method="post">
+                <form action="/Home" method="post">
                     <h1>Sign In</h1>
                     <div class="social-icons">
                         <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
@@ -26,7 +26,7 @@
                         <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
                     </div>
                     <span>or use your email password</span>
-                    <input type="email" id="email" name="email" placeholder="Email">
+                    <input type="text" id="username" name="username" placeholder="Username">
                     <input type="password" id="password" name="password" placeholder="Password">
                     <a href="#">Forget Your Password?</a>
                     <button type="submit">Sign In</button>
