--- a/templates/Confirmed.html
+++ b/templates/Confirmed.html
@@ -35,11 +35,9 @@
                 </nav>
         </header>
         <main class="main-home">
-            <section class="container-sald">
-                <h2>Bienvenido </h2>
-                <p>Saldo Actual</p>
-                <!-- Aqui debe colocar el total del saldo -->
-
+            <section>
+                <h2>SE HAN REGISTRADO TUS DATOS CORRECTAMENTE</h2>
+                <a href="Login.html"><button class="login">Iniciar Sesion</button></a>
             </section>
         </main>
     </div>
