--- a/static/css/style.css
+++ b/static/css/style.css
@@ -58,16 +58,30 @@ body {
 a {color: inherit; text-decoration: none;}
 
 .wrapper {
-  max-width: 1200px;
+  max-width: 1300px;
   margin: 0 auto;
 }
 
 /* ------------ HEADER -_-------------------------------- */
 
-.container-header{background-color: rgb(62, 11, 99); padding: 1em; } 
+.container-header{background-color: rgb(254 138 1); padding: 1em; } 
+
 .container-header > .wrapper {display: flex; justify-content: space-around;}
-.title_bank_principal { margin-left: .3em; font-size: 2.34em; color: #fff;}
+
+.title_bank_principal { 
+  margin-left: .3em; 
+  font-size: 2.34em; 
+  color: #fff;
+  font-weight: bold;
+  text-shadow: 4px 1px black;
+}
+
+.options-header {
+  margin-top: 7px;
+}
+
 .bar-menu {font-size: 2em; color: #fff;}
+
 .title-header {display: flex; align-items: center;}
 
 
@@ -81,8 +95,8 @@ a {color: inherit; text-decoration: none;}
   width: 100%;
   height: 100%;
   border-bottom: #000 solid 2px;
-  position: absolute;
-  z-index: 1;
+  position: fixed;
+  z-index: 12;
   top: 11%;
   
 }
@@ -99,15 +113,43 @@ a {color: inherit; text-decoration: none;}
   justify-content: center;
 }
 
-.Buttoms-Signin_Login { gap: 30px; }
+.open-main , .close-main{
+  background: transparent;
+  outline: none;
+  border: none;
+  width: 60px;
+}
+
+/*--------------------- Buttom header ----------------------- */
+
+.Buttoms-Signin_Login { gap: 30px;  }
 
 .btn-buttom-bar {
+  position: relative;
   border: none;
   border-radius: 10px;
   padding: 1em;
-  background-color: #3d40da;
+  background-color: transparent;
   color: #fff;
   cursor: pointer;
+}
+
+.registrer-btn-phone, .login-btn-phone {
+  display: none;
+}
+
+
+.btn-buttom-bar::before {
+  background-color: #3d40da;
+  color: #fff;
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
 .list-options {
@@ -129,9 +171,7 @@ a {color: inherit; text-decoration: none;}
   overflow: hidden;
 }
 
-.header_nav_bars {
-  margin-top: 3em;
-}
+.header_nav_bars {margin-top: 3em;}
 
 .bar-top {margin: 0 1em 2em; }
 
@@ -163,29 +203,140 @@ a {color: inherit; text-decoration: none;}
   padding: 1em 2em;
 }
 
-.txt-bars {
-  width: 113px;
+.txt-bars {width: 113px;}
+
+
+/* --------------- Ventajas Sesiones ---------------- */
+
+.wrapper-advantages {
+  display: grid;
 }
+
 /* ---------------- CARRUSEL ------------------------- */
+
+
+.hero-about {
+  display: flex;
+  overflow: hidden;
+}
 
 .carrusel-container {
   display: flex;
   width: 100%;
   height: 100%;
-  max-width: 1100px;
   position: relative;
-  overflow: hidden;
+
+}
+
+/* BUTTOMS */
+
+.carrusel-arrow {
+  outline: none;
+  position: absolute;
+  z-index: 10;
+  border-radius: 82%;
+  display: none;
+  background: #00000038; 
+  border: none;
+  width: 71px;
+  cursor: pointer;
+  top: 300px;
+}
+
+.style-icon {
+  padding: 19px 20px;
+}
+
+.carrusel-arrow-left {
+  left: 32px;
+}
+
+.carrusel-arrow-right {
+  right: 32px;
 }
 
 .carrusel-bank {
   display: flex;
   flex-direction: column;
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
+  height: 520px;
 }
 
-.about-bank-carrusel {
-  margin: 0 20px;
+.image-carrusel img{
+  max-height: 520px;
+  background-size: cover;
+  max-width: 851px;
 }
 
+.carrusel-text{
+  width: 60%;
+  position: absolute;
+  top: 180px;
+  left: 194px;
+}
+
+/* FINAL DEL CARRUSEL */
+
+.title-landing {
+  font-size: 3em;
+  text-align: center;
+  padding: 21px 0 2.2em;
+}
+
+/*---------------------------------  MODO PC ESTA ABAJO ------------------7- */
+
+@media (width > 750px) {
+
+  .navigation-header {top: 105px;}
+
+  .registrer-btn-phone, .login-btn-phone {
+    display: inline;
+  }
+
+  /* CARRUSEL DE PC */
+  .carrusel-bank {
+    flex-direction: row;
+    width: 115%;
+  }
+
+  .carrusel-arrow {
+    display: block;
+  }
+
+  .image-carrusel {
+    position: relative;
+    z-index: -0;
+    left: -147px;
+
+  }
+
+  .about-bank-carrusel {
+    width: 886px;
+    background: #7738dd;
+    border-top-right-radius: 138px;
+    position: relative;
+    z-index: 1;
+    left: -41px;
+    border-bottom-right-radius: 16%;
+  }
+
+  /* CARRUSEL DE PC END */
+  .wrapper-advantages {
+    display: grid;
+    grid-template-columns: repeat(5 , 1fr);
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, 50%);
+  }
+
+  .image-reference {
+    grid-area: 1 / 3;
+  }
+
+  .size-down-left {
+    grid-column: 2 / -6;
+    grid-row: 2 / 3;
+
+  }
+}
 
