--- a/templates/Home.html
+++ b/templates/Home.html
@@ -11,37 +11,60 @@
 </head>
 <body>
     <div id="wrapper" class="home">
-        <header class="header-home">
-            <div class="title-header">
-                <i class="fa-solid fa-building-columns"></i> <!-- aqui debe ir icono del banco, se pondra un bank para emular -->
-                <h1 class="title_bank_principal">Salame Bank</h1>
+        <header id="header-all-container">
+            <div class="container-header">
+                <div class="wrapper header-wrapper">
+                    <a href="index">
+                        <div class="title-header">
+                        <img src="../static/img/logo Bank.jpeg" style="width: 69px;" alt="salame bank logo">
+                            <h1 class="title_bank_principal">Salame Bank</h1>
+                        </div>
+                    </a>
+                    
+                    <div class="options-header">
+                        <div class="header-bottom">
+                            <ul class="Buttoms-Signin_Login sing-log-pc">
+                                <li class="btn-losing"><a class="btn-buttom-bar registrer-btn-phone" href="Login">Iniciar Sesion</a></li>
+                                <li class="btn-losing"><a class="btn-buttom-bar login-btn-phone" href="Signin">Registrarse</a></li>
+                            </ul>
+                        </div>
+                    </div>
+    
+                    <button id="open-bar" class="open-main"><i class="fa-solid fa-bars bar-menu"></i></button>
+            
+                    <nav class="navigation-header" id="nav-header">
+                        <button id="close-bar" class="close-main"><i class="fa-solid fa-xmark"></i></button>
+                        <ul class="container-options">
+                            <li class="ul-option-home">
+                                <a href="" class="btn-options">#</a>
+                            </li>
+                            <li class="ul-option-home">
+                                <a href="" class="btn-options">#</a>
+                            </li>
+                            <li class="ul-option-home">
+                                <a href="" class="btn-options">#</a>
+                            </li>
+                            <li class="ul-option-home">
+                                <a href="" class="btn-options">#</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
-            <button id="open-bar" class="open-main"><i class="fa-solid fa-bars bar-menu"></i></button>
-        
-                <nav class="navigation-header" id="nav-header">
-                    <button id="close-bar" class="close-main"><i class="fa-solid fa-xmark"></i></button>
-
-                    <ul class="option-home">
-                        <li class="option-list">
-                            <a href="depositar">Depositar Dinero</a>
-                        </li>
-                        <li class="option-list">
-                            <a href="retirar">Retirar Dinero</a>
-                        </li>
-                        <li class="option-list">
-                            <a href="transferir">Transferir Dinero</a>
-                        </li>
-                    </ul>
-                </nav>
         </header>
+
         <main class="main-home">
             <section class="container-sald">
-                <h2>Bienvenido </h2>
-                <p>Saldo Actual</p>
-                <!-- Aqui debe colocar el total del saldo -->
+                <h2>Bienvenido {{client_info["username"]}}</h2>
+                <p>Saldo Actual: {{client_info["currency"]}}</p>
+
+                
 
             </section>
         </main>
+        <aside>
+
+        </aside>
     </div>
 
 
