--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,3 +1,37 @@
-.header-home {
-    background-color: aqua;
+.main-home {
+    display: flex;
+    justify-content: space-evenly;
+    gap: 20%;
+    margin-left: 4em;
+    align-items: center;
+}
+
+.container-info-top{
+    margin-top: 3em;
+}
+
+.name-cursor > h2 {
+    font-size: 2.4em;
+    margin: 20px 0;
+    margin-left: 43px;
+}
+
+.currecy-cursor{
+    display: flex;
+    gap: 20px;
+}
+
+.currency {
+    padding: 40px;
+    border: black solid 1px;
+    font-size: 1.3em;
+}
+
+.dada {
+    border: 1px solid #000;
+    width: 30%;
+}
+
+.option-pc {
+    width: 50%;
 }
