--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,47 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
 :root {
-    --merriweather-light: {
-      font-family: "Merriweather", serif;
-      font-weight: 300;
-      font-style: normal;
-    };
-    
-    --merriweather-light-italic: {
-      font-family: "Merriweather", serif;
-      font-weight: 300;
-      font-style: italic;
-    };
-    
-    --merriweather-regular: {
-      font-family: "Merriweather", serif;
-      font-weight: 400;
-      font-style: normal;
-    };
-    
-    --merriweather-regular-italic: {
-      font-family: "Merriweather", serif;
-      font-weight: 400;
-      font-style: italic;
-    };
-    
-    --merriweather-bold: {
-      font-family: "Merriweather", serif;
-      font-weight: 700;
-      font-style: normal;
-    };
-    
-    --merriweather-bold-italic: {
-      font-family: "Merriweather", serif;
-      font-weight: 700;
-      font-style: italic;
-    };
-    
-    --merriweather-black: {
-      font-family: "Merriweather", serif;
-      font-weight: 900;
-      font-style: normal;
-    };
-    
+    --fuente-bank: "Great Vibes", cursive;;
     --merriweather-black-italic: {
       font-family: "Merriweather", serif;
       font-weight: 900;
@@ -74,6 +33,7 @@ a {color: inherit; text-decoration: none;}
   color: #fff;
   font-weight: bold;
   text-shadow: 4px 1px black;
+  font-family: var(--fuente-bank);
 }
 
 .options-header {
@@ -117,6 +77,7 @@ a {color: inherit; text-decoration: none;}
   background: transparent;
   outline: none;
   border: none;
+  cursor: pointer;
   width: 60px;
 }
 
@@ -132,31 +93,62 @@ a {color: inherit; text-decoration: none;}
   background-color: transparent;
   color: #fff;
   cursor: pointer;
+  z-index: 2;
+  transition: all 0.6s ease;
 }
 
 .registrer-btn-phone, .login-btn-phone {
   display: none;
 }
 
+.btn-buttom-bar::after{
+  content: "";
+  position: absolute;
+  height: 110%;
+  left: -27%;
+  top: 0;
+  transform: skew(20deg, 0deg);
+  background-color: #ffffff;
+  z-index: -1;
+  transition: all 0.4s ease;
+}
 
 .btn-buttom-bar::before {
-  background-color: #3d40da;
-  color: #fff;
   content: "";
-  display: block;
   position: absolute;
   width: 100%;
   height: 100%;
-  top: 0;
   left: 0;
+  top: 0;
+  transform: skew(20deg, 0deg);
+  transition: all 0.4s ease;
   z-index: -1;
+}
+
+.btn-buttom-bar:hover {
+  color: #000;
+}
+
+.btn-buttom-bar:hover::after{
+  background-color: #ffffff31;
+  width: 10%;
+  color: #000;
+  transform: skew(20deg, 0deg) translateX(160px);
+}
+
+.btn-buttom-bar:hover::before {
+  background-color: #fff;
+  border: 3px solid #fff;
+  color: #000;
+  transform: skew(20deg, 0deg) scale(1.1);
 }
 
 .list-options {
   display: flex;
   flex-direction: column;
-  margin: 2em 0;
+  margin: 0 0 3em;
   gap: 1px;
+  width: 60%;
 }
 
 .links-bars a{
@@ -171,13 +163,13 @@ a {color: inherit; text-decoration: none;}
   overflow: hidden;
 }
 
-.header_nav_bars {margin-top: 3em;}
+.header_nav_bars {}
 
 .bar-top {margin: 0 1em 2em; }
 
 .title-bar-nav{  font-size: 25px; text-align: center; }
 
-.languaje-top {justify-content: center; margin-left: -1.8em;}
+.languaje-top {justify-content: center; margin-left: -1.8em; margin-bottom: 45px;}
 
 .min-carrusel {
   display: flex;
@@ -194,7 +186,6 @@ a {color: inherit; text-decoration: none;}
 
 .min-bank-carrusel {
   background-color: #2c2eb7;
-  width: 400px;
   display: flex;
   color: #fff;
   flex-direction: column;
@@ -225,7 +216,15 @@ a {color: inherit; text-decoration: none;}
   width: 100%;
   height: 100%;
   position: relative;
+}
 
+.h2-carrusel {
+  font-size: 1em;
+  color: #fff;
+}
+
+.carrusel-text p {
+  padding: 20px 0 ;
 }
 
 /* BUTTOMS */
@@ -281,12 +280,40 @@ a {color: inherit; text-decoration: none;}
 .title-landing {
   font-size: 3em;
   text-align: center;
-  padding: 21px 0 2.2em;
+  padding: 21px 0 0.7em;;
 }
+
+.advantages-bank {
+  font-size: 1.3em;
+  color: #fff;
+  background: rgb(193,59,255);
+  background: linear-gradient(166deg, rgba(193,59,255,1) 0%, rgba(34,47,145,1) 100%);
+}
+
+.wrapper-advantages * {
+  text-align: center;
+}
+
+
+/* ------------ FOOTER ---------------- */
+
+.background-img-footer {
+  width: 100px;
+}
+
+.footer-content {
+  display: grid;
+}
+
 
 /*---------------------------------  MODO PC ESTA ABAJO ------------------7- */
 
 @media (width > 750px) {
+
+  .container-bar-main {
+    display: flex;
+    flex-direction: row-reverse;
+  }
 
   .navigation-header {top: 105px;}
 
@@ -302,6 +329,11 @@ a {color: inherit; text-decoration: none;}
 
   .carrusel-arrow {
     display: block;
+  }
+
+  .h2-carrusel {
+    font-size: 3em;
+    color: #fff;
   }
 
   .image-carrusel {
@@ -334,9 +366,24 @@ a {color: inherit; text-decoration: none;}
   }
 
   .size-down-left {
-    grid-column: 2 / -6;
+    grid-column: 2 / -4;
     grid-row: 2 / 3;
-
+    margin-left: -53px;
   }
+
+  .size-down-rigth{
+    grid-column: 4 / -1;
+      grid-row: 2 / 2;
+  }    
+    
+    .size-top-left {
+      grid-row: 1 / 2;
+      grid-column: 1 / 3;
+  }
+    
+    .size-top-rigth{
+      grid-column: 4 / 6
+  }
+    
 }
 
