--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"> -->
     <link rel="stylesheet" href="../static/css/reset.css">    
     <link rel="stylesheet" href="../static/css/style.css">
-    <link rel="icon" href="../static/img/logo Bank.jpeg" type="image/png">
+    <link rel="icon" href="../static/img/logo_Bank-removebg-preview.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
     <title>Salame Bank</title>
@@ -43,83 +43,84 @@
                         </ul>
                     </div>
 
-                    <ul class="list-options">
-                        <li class="links-bars"><a href="#">Cuentas</a></li>
-                        <li class="links-bars"><a href="#">Seguros</a></li>
-                        <li class="links-bars"><a href="#">Hipotecas</a></li>
-                        <li class="links-bars"><a href="#">Depositos</a></li>
-                    </ul>
-
-                        <!-- OPCION DE MENU EXTENSO  -->
-                    <div class="header_nav_bars">
-                            <!-- Menu bar on mobile view -->
-                        <nav class="nav_menu">    
-                            <!----------------   MAIN BARS  ---------------------->
-                            <div class="main-bar-aside">
-                                <div class="wrapper">
-                                    <main id="info-bar" class="contain-bar">
-                                        <section class="bar-top">
-                                            <h1 class="title-bar-nav">Experiencias</h1>
-                                            <div class="wrapper bars-carrusel">
-                                                <button class="carrusel-arrow carrusel-prev" id="button-prev" data-button="button-prev"
-                                                onclick="app.processingButton(event)">
-                                                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-left"
-                                                        class="svg-inline--fa fa-chevron-left fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg"
-                                                        viewBox="0 0 320 512">
-                                                        <path fill="currentColor"
-                                                            d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z">
-                                                        </path>
-                                                    </svg>
-                                                </button>
-                                                <div class="min-carrusel">
-                                                   
-                                                     <!-- CARRUSEL -->
-                                                    <div class="min-bank-carrusel">
-                                                        <div class="icon-bars">
-                                                            <i class=" icon-bar-carrusel fa-solid fa-user"></i>
+                    <div class="div container-bar-main">
+                        <ul class="list-options">
+                            <li class="links-bars"><a href="#">Cuentas</a></li>
+                            <li class="links-bars"><a href="#">Seguros</a></li>
+                            <li class="links-bars"><a href="#">Hipotecas</a></li>
+                            <li class="links-bars"><a href="#">Depositos</a></li>
+                        </ul>
+    
+                            <!-- OPCION DE MENU EXTENSO  -->
+                        <div class="header_nav_bars">
+                                <!-- Menu bar on mobile view -->
+                            <nav class="nav_menu">    
+                                <!----------------   MAIN BARS  ---------------------->
+                                <div class="main-bar-aside">
+                                    <div class="wrapper">
+                                        <main id="info-bar" class="contain-bar">
+                                            <section class="bar-top">
+                                                <h1 class="title-bar-nav">Experiencias</h1>
+                                                <div class="wrapper bars-carrusel">
+                                                    <button class="carrusel-arrow carrusel-prev" id="button-prev">
+                                                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-left"
+                                                            class="svg-inline--fa fa-chevron-left fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg"
+                                                            viewBox="0 0 320 512">
+                                                            <path fill="currentColor"
+                                                                d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z">
+                                                            </path>
+                                                        </svg>
+                                                    </button>
+                                                    <div class="min-carrusel">
+                                                       
+                                                         <!-- CARRUSEL -->
+                                                        <div class="min-bank-carrusel">
+                                                            <div class="icon-bars">
+                                                                <i class=" icon-bar-carrusel fa-solid fa-user"></i>
+                                                            </div>
+                                                            <div class="txt-bars">
+                                                                <p>Lorem ipsum dolor sit amet consectetur</p>
+                                                            </div>
                                                         </div>
-                                                        <div class="txt-bars">
-                                                            <p>Lorem ipsum dolor sit amet consectetur</p>
+                                                        <div class="min-bank-carrusel">
+                                                            <div class="icon-bars">
+                                                                <i class=" icon-bar-carrusel fa-solid fa-user"></i>
+                                                            </div>
+                                                            <div class="txt-bars">
+                                                                <p>Lorem ipsum dolor sit amet consectetur</p>
+                                                            </div>
                                                         </div>
-                                                    </div>
-                                                    <div class="min-bank-carrusel">
-                                                        <div class="icon-bars">
-                                                            <i class=" icon-bar-carrusel fa-solid fa-user"></i>
+                                                        <div class="min-bank-carrusel">
+                                                            <div class="icon-bars">
+                                                                <i class=" icon-bar-carrusel  fa-solid fa-user"></i>
+                                                            </div>
+                                                            <div class="txt-bars">
+                                                                <p>Lorem ipsum dolor sit amet consectetur</p>
+                                                            </div>
                                                         </div>
-                                                        <div class="txt-bars">
-                                                            <p>Lorem ipsum dolor sit amet consectetur</p>
+                                                        <div class="min-bank-carrusel">
+                                                            <div class="icon-bars">
+                                                                <i class=" icon-bar-carrusel fa-solid fa-user"></i>
+                                                            </div>
+                                                            <div class="txt-bars">
+                                                                <p>Lorem ipsum dolor sit amet consectetur</p>
+                                                            </div>
                                                         </div>
-                                                    </div>
-                                                    <div class="min-bank-carrusel">
-                                                        <div class="icon-bars">
-                                                            <i class=" icon-bar-carrusel  fa-solid fa-user"></i>
-                                                        </div>
-                                                        <div class="txt-bars">
-                                                            <p>Lorem ipsum dolor sit amet consectetur</p>
-                                                        </div>
-                                                    </div>
-                                                    <div class="min-bank-carrusel">
-                                                        <div class="icon-bars">
-                                                            <i class=" icon-bar-carrusel fa-solid fa-user"></i>
-                                                        </div>
-                                                        <div class="txt-bars">
-                                                            <p>Lorem ipsum dolor sit amet consectetur</p>
-                                                        </div>
-                                                    </div>
-                                                </div> 
-                                            </div>
-                                        </section>
-                                        <section class="bar-bottom"></section>
-                                    </main>
-                                    <aside>
-                                    
-                                    </aside>
-                                </div> 
-                            </div>
-                            
-                        </nav>        
+                                                    </div> 
+                                                </div>
+                                            </section>
+                                            <section class="bar-bottom"></section>
+                                        </main>
+                                        <aside>
+                                        
+                                        </aside>
+                                    </div> 
+                                </div>
+                                
+                            </nav>        
+                        </div>
+                        
                     </div>
-                    
                     
 
                     <ul class="choose-languajes languaje-top">
@@ -154,8 +155,8 @@
             <div class="carrusel-bank">
                 <div class="about-bank-carrusel">
                     <div class="container-text carrusel-text">
-                        <h2>El Banco que siempre vela por ti</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae fugit animi in quos quia aut, modi, ipsa perferendis iure corrupti voluptatibus asperiores magni soluta omnis? Maiores mollitia quam est labore. dadadadadadaddadadddd</p>
+                        <h2 class="title-carrusel h2-carrusel">El Banco que siempre vela por ti</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae fugit animi in quos quia aut</p>
                     </div>
                 </div>
                 <div class="image-carrusel">
@@ -176,8 +177,8 @@
             <div class="carrusel-bank">
                 <div class="about-bank-carrusel">
                     <div class="container-text carrusel-text">
-                        <h2>El Banco que siempre vela por ti</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae fugit animi in quos quia aut, modi, ipsa perferendis iure corrupti voluptatibus asperiores magni soluta omnis? Maiores mollitia quam est labore. dadadadadadaddadadddd</p>
+                        <h2 class="title-carrusel h2-carrusel">El Banco que siempre vela por ti</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae fugit animi in quos quia aut</p>
                     </div>
                 </div>
                 <div class="image-carrusel">
@@ -200,8 +201,8 @@
             <div class="carrusel-bank">
                 <div class="about-bank-carrusel">
                     <div class="container-text carrusel-text">
-                        <h2>El Banco que siempre vela por ti</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae fugit animi in quos quia aut, modi, ipsa perferendis iure corrupti voluptatibus asperiores magni soluta omnis? Maiores mollitia quam est labore. dadadadadadaddadadddd</p>
+                        <h2 class="title-carrusel h2-carrusel">El Banco que siempre vela por ti</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae fugit animi in quos quia aut</p>
                     </div>
                 </div>
                 <div class="image-carrusel">
@@ -244,28 +245,35 @@
                         <h2>0 Comisiones ni Condiciones</h2>
                         <p></p>
                     </div>
-                    <div class="text-advantages">
+                    <div class="text-advantages size-down-rigth">
                         <i></i>
                         <h2>Servicio de Calidad las 24 horas</h2>
                         <p></p>
                     </div>
-                    <div class="text-advantages">
+                    <div class="text-advantages size-top-left">
                         <i></i>
                         <h2>Tarifas competitivas y beneficios adicionales: </h2>
                         <p></p>
                     </div>
-                    <div class="text-advantages">
+                    <div class="text-advantages size-top-rigth">
                         <i></i>
                         <h2>Seguridad y protección: </h2>
                         <p></p>
                     </div>
                 </div>
+                </div>
             </div>
         </section>
     </main>
 
-    <footer id="footer about_bank">
-
+    <footer id="footer-bank" class="footer about_bank">
+        <div class="wrapper ">
+            <div class="footer-content">
+                <div class="footer-log">
+                    <img class="background-img-footer" src="../static/img/logo_Bank-removebg-preview.png" alt="logo bank sin fondo">
+                </div>
+            </div>
+        </div>
     </footer>
     <script src="../static/js/barba.min.js"></script>
     <script src="../static/js/script.js"></script>
