--- a/templates/Completed.html
+++ b/templates/Completed.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <section>
-        <h2>SE HAN REGISTRADO TUS DATOS CORRECTAMENTE</h2>
+        <h2>SE HA COMPLETADO LA TRANSACCION :3</h2>
         <a href="Login"><button class="login">Iniciar Sesion</button></a>
     </section>
 
