--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,30 +1,38 @@
 .main-home {
     display: flex;
-    justify-content: space-evenly;
-    gap: 20%;
+    justify-content: space-between;
+    gap: 14%;
     margin-left: 4em;
     align-items: center;
 }
 
 .container-info-top{
-    margin-top: 3em;
+    margin-top: 4em;
 }
 
 .name-cursor > h2 {
     font-size: 2.4em;
-    margin: 20px 0;
+    margin: 20px 0 1em;
     margin-left: 43px;
 }
 
 .currecy-cursor{
     display: flex;
-    gap: 20px;
+    gap: 9em;
+    border-bottom: #000 1px solid;
+    font-size: 1.3em;
+    justify-content: center;
+    align-items: center;
 }
 
-.currency {
-    padding: 40px;
-    border: black solid 1px;
-    font-size: 1.3em;
+.currency-actual{
+    margin-left: 30px;
+}
+
+
+.ul-btn-cursor {
+    display: flex;
+    gap: 30px;
 }
 
 .dada {
@@ -33,5 +41,65 @@
 }
 
 .option-pc {
-    width: 50%;
+    color: #fff;
+    width: 25%;
+    background-color: rgb(88, 36, 161);
+}
+
+.ul-option-home {
+    margin: 41px 0
+}
+
+.btn-options {
+    padding: 20px;
+    display: inline-block;
+    width: 85%;
+}
+
+.history-client{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 66px;
+    border: 1px solid #000;
+    padding: 38px;
+}
+
+.btn-view-history {
+    border-bottom: 1px solid #000;
+    width: 100%;
+}
+
+.btn-option {
+    width: 100%; 
+    display: inline-block;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.radius-link {
+    background: aqua;
+    text-align: center;
+    border-radius: 38px;
+}
+
+.radius-link1 {
+    padding: 32%;
+}
+
+.radius-link2 {
+    width: 31%;
+    padding: 27%;
+}
+
+.radius-link3 {
+    width: 30%;
+    padding: 22%;
+}
+
+@media (width > 750px) {
+    .open-main{
+    }
 }
