--- a/templates/Completed.html
+++ b/templates/Completed.html
@@ -8,7 +8,7 @@
 <body>
     <section>
         <h2>SE HA COMPLETADO LA TRANSACCION :3</h2>
-        <a href="Login"><button class="login">Iniciar Sesion</button></a>
+        <a href="Home"><button class="login">Volver al menu jefe</button></a>
     </section>
 
 </body>
