--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
             <div class="wrapper header-wrapper">
                 <a href="index">
                     <div class="title-header">
-                    <img src="../static/img/logo Bank.jpeg" style="width: 69px;" alt="salame bank logo">
+                    <img src="../static/img/logo_Bank-removebg-preview.png" style="width: 69px;" alt="salame bank logo">
                         <h1 class="title_bank_principal">Salame Bank</h1>
                     </div>
                 </a>
