--- a/static/css/getMoney.css
+++ b/static/css/getMoney.css
@@ -12,6 +12,90 @@ body {
     position: absolute;
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 100%;
+    width: 17%;
+    top: 85px;
+    left: 35%;
+    background-color: #ffffff80;
+    padding: 6% 6%;
+    color: #000;
+    border-radius: 10%;
 }
+
+
+#btn-submit {
+    background-color: #b84cdb;
+    color: #fff;
+    width: 126px;
+    margin: 33px auto 0;
+    border-radius: 22px;
+    padding: 1em;
+    font-size: 1.2em;
+    cursor: pointer;
+}
+
+.form-money input {
+    background: transparent;
+    border: none;
+    width: 100%;
+    outline: none;
+    border-bottom: 1px solid #fff;
+    color: #000;
+}
+
+.form-li {
+    margin: 24px 0;
+}
+
+.label-top{
+margin-top: 50px;
+}
+
+.center{
+    top: 107px;
+    left: 90px;
+}
+
+.top-left{
+    top: 174px;
+    left: 89px;
+}
+
+.form-all .form-li label {
+    position: absolute;
+    padding: 10px 0;
+    font-size: 21px;
+    color: #fff;
+    pointer-events: none;
+    transition: .5s;
+}
+  
+
+.container-form-money .form-li input:focus ~ label,
+.container-form-money .form-li input:valid ~ label {
+    
+    top: 93px;
+    left: 76px;
+    color: peru;
+    font-size: 15px;
+}
+
+.container-form-money .form-li .input-top-left2:focus ~ label,
+.container-form-money .form-li .input-top-left2:valid ~ label {
+    top: 155px;
+    left: 77px;
+}
+
+.float {
+    margin-top: 2em;
+    float: right;
+    outline: none;
+    background: var(--color-nectar);
+    border: none;
+    display: block;
+    border-radius: 9px;
+    outline: none;
+    padding: 12px;
+    color: #fff;
+}
+
+
