--- a/static/css/home.css
+++ b/static/css/home.css
@@ -11,28 +11,45 @@
 }
 
 .name-cursor > h2 {
-    font-size: 2.4em;
+    font-size: 2.8em;
     margin: 20px 0 1em;
     margin-left: 43px;
 }
 
 .currecy-cursor{
     display: flex;
-    gap: 9em;
+    gap: 6.5em;
     border-bottom: #000 1px solid;
     font-size: 1.3em;
     justify-content: center;
     align-items: center;
 }
 
+.btn-logout{
+    align-self: center;
+    color: #fff;
+    font-size: 1.3em;
+}
+
 .currency-actual{
     margin-left: 30px;
 }
 
+.currency-actual p {
+    font-size: 44px;
+}
 
 .ul-btn-cursor {
     display: flex;
     gap: 30px;
+}
+
+.details-about {
+    display: flex;
+    justify-content: flex-end;
+    gap: 15px;
+    margin-block: 20px;
+    font-size: 24px;
 }
 
 .dada {
@@ -60,17 +77,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 66px;
-    border: 1px solid #000;
     padding: 38px;
 }
 
 .btn-view-history {
-    border-bottom: 1px solid #000;
-    width: 100%;
-}
-
-.btn-option {
     width: 100%; 
     display: inline-block;
     display: flex;
@@ -79,27 +89,67 @@
     align-items: center;
 }
 
+.h2-history {
+    font-size: 3em;
+    font-weight: bolder;
+}
+
 .radius-link {
-    background: aqua;
+    background: #c239ec;
     text-align: center;
     border-radius: 38px;
+    width: 24px;
+    padding: 26px;
+    color: #fff;
+    text-shadow: 3px 1px black;
 }
 
-.radius-link1 {
-    padding: 32%;
+
+.btn-option {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.radius-link2 {
-    width: 31%;
-    padding: 27%;
+.ul-list-transactions {
+    display: flex;
+    flex-direction: column;
 }
 
-.radius-link3 {
-    width: 30%;
-    padding: 22%;
+.list-transation-none {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-about {
+    display: flex;
+    padding: 1em 2em;
+    border-radius: 20px;
+    justify-content: center;
+    align-items: center;
+    background: #fe5f00;
+    color: #fff;
+    gap: 27px;
+}
+
+.shoppin-transaction {
+    width: 24px;
+    border-radius: 50%;
+    background: #9ec2e2;
+    padding: 16px;
+    text-align: center;
+}
+
+.info-transation {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    justify-content: center;
 }
 
 @media (width > 750px) {
-    .open-main{
-    }
 }
