--- a/templates/Home.html
+++ b/templates/Home.html
@@ -16,13 +16,16 @@
                 <div class="wrapper header-wrapper">
                     <a href="index">
                         <div class="title-header">
-                        <img src="../static/img/logo Bank.jpeg" style="width: 69px;" alt="salame bank logo">
+                        <img src="../static/img/logo_Bank-removebg-preview.png" style="width: 69px;" alt="salame bank logo">
                             <h1 class="title_bank_principal">Salame Bank</h1>
                         </div>
                     </a>
     
+                    <a href="{{ url_for('logout')}} " class="btn-logout"><i class="fa-solid fa-power-off"></i> Cerrar Sesion</a>
+
                     <button id="open-bar" class="open-main"><i class="fa-solid fa-bars bar-menu"></i></button>
             
+
                     <nav class="navigation-header" id="nav-header">
                         <button id="close-bar" class="close-main"><i class="fa-solid fa-xmark"></i></button>
                         <ul class="container-options">
@@ -53,58 +56,69 @@
                         </div>
                         <div class="currecy-cursor cointainer-cursor">
                             <div class="currency-actual">
-                                <p> {{client_info["currency"]}}.00</p>
+                                <p>Saldo de la Cuenta: {{client_info["currency"]}}.00  €</p>
                             </div>
                             <div class="btn-options-cursor">
                                 <ul class="ul-btn-cursor">
                                     <li class="li-btn-cursor">
                                         <a href="deposit" class="btn-option">
                                             <i class="fa-solid fa-plus radius-link radius-link1"></i>
-                                            Retirar
+                                            Depositar
                                         </a>
                                     </li>
                                     <li class="li-btn-cursor">
-                                        <a href="#" class="btn-option">
-                                            <i class="fa-solid fa-arrow-up radius-link radius-link2"></i>
-                                            Ingresar 
+                                        <a href="withdraw" class="btn-option">
+                                            <i class="fa-solid fa-minus radius-link radius-link2"></i>                                    
+                                            Retirar 
                                         </a>
                                     </li>
                                     <li class="li-btn-cursor">
-                                        <a href="Transferir-Dinero" class="btn-option">
+                                        <a href="transfer" class="btn-option">
                                             <i class="fa-solid fa-arrow-down radius-link radius-link3"></i>
                                             Transferir
                                         </a>
                                     </li>
-
                                 </ul>
 
                             </div>
                            
                         </div>
+
+                        <div class="info-iban">
+                            <div class="details-about">
+                                <p>Mostrar informacion </p>
+                                <i class="fa-solid fa-angle-right"></i>
+                            </div>
+                            <!-- <p>IBAN : {{client_info["IBAN"]}}</p> -->
+                        </div> 
+
                         <div class="history-client option-info-client">
-                            <div class="info-iban">
-                                <p>IBAN : {{client_info["IBAN"]}}</p>
-                            </div> 
+                            
                             <div class="btn-view-history">
-                                <p class="btn-option">Transacciones</p>
-                                <ul>
-                                    <li></li>
+                                <h2 class="h2-history">Transacciones</h2>
+                                <ul class="ul-list-transactions">
+                                    <li class="container-about">
+                                        <i class="fa-solid fa-cart-shopping shoppin-transaction"></i>
+                                        <ul class="info-transation">
+                                            <li>Fecha: {{ transaccion["date"] }}</li>
+                                            <li>Hora: {{ transaccion["time"] }}</li>
+                                        </ul>
+                                        <div>
+                                            <i class="fa-solid fa-plus"></i> {{ transaccion["balance"] }}</div>
+                                    </li>
+                                        <!-- {% endfor %}
+                                        {% for transaccion in data_transactions %} -->
+                                    </li>                                    
+                                    <!-- <li class="list-transation-none">
+                                        <img src="../static/img/mony-removebg-preview.png" alt="no hay nada mony salame bank">
+                                        No haz hecho alguna transaccion por ahora.
+                                    </li> -->
                                 </ul>
                             </div>                          
                         </div>
                     </div>
                 </section>
             </div>
-            <aside class="option-pc">
-                <ul class="container-options">
-                    <li class="ul-option-home">
-                        <a href="" class="btn-options">Ingresar Dinero</a>
-                    </li>
-                    <li class="ul-option-home">
-                        <a href="" class="btn-options">Cerrar Sesion</a>
-                    </li>
-                </ul>
-            </aside>
         </main>
         
     </div>
