--- a/templates/transfer.html
+++ b/templates/transfer.html
@@ -6,10 +6,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="../static/css/reset.css">
     <link rel="stylesheet" href="../static/css/style.css">
-    <link rel="stylesheet" href="../static/css/home.css">
+    <link rel="stylesheet" href="../static/css/getMoney.css">
     <title>Document</title>
 </head>
-<body>
 <body>
     <div id="wrapper" class="home">
         <header id="header-all-container">
@@ -24,17 +23,31 @@
                 </div>
             </div>
         </header>
-        <section>
-            <form action="" method="post">
-                <label for="name">Nombre a Enviar</label>
-                <input type="text" name="name" id="name">
-                <label for="money">Dinero a enviar</label>
-                <input type="number" name="money" id="money">
-                <input type="submit" value="Enviar">
-            </form>
-        </section>
+        <main class="form-all">
+            <section class="container-form-money">
+                <form action="/Completed" method="post" class="form-money">
+                    
+                    <input type="hidden" name="action" value="transfer">
+
+                    <ul>
+                        <li class="form-li">
+                            <input type="text" name="receiver" id="receiver" required>
+                            <label class="center" for="money">Usuario a depositar</label>
+                        </li>
+                        <li class="form-li">
+                            <input type="number" name="money" id="money" required>
+                            <label class="center" for="money">Dinero a depositar</label>
+                        </li>
+                        <li class="form-li label-top">
+                            <input class="input-top-left2" type="password" name="password" id="password" required>
+                            <label class="top-left" for="password">Ingrese su contraseña</label>
+                        </li>
+                    </ul>
+    
+                    <input type="submit" id="btn-submit" value="Transferir">
+                </form>
+            </section>
+        </main>
     </div>
-</body>
-</html>
 </body>
 </html>
