--- a/templates/withdraw.html
+++ b/templates/withdraw.html
@@ -23,15 +23,27 @@
                 </div>
             </div>
         </header>
-        <section>
-            <form action="" method="post">
-                <label for="name">Nombre</label>
-                <input type="text" name="name" id="name">
-                <label for="money">Dinero a ingresar</label>
-                <input type="number" name="money" id="money">
-                <input type="submit" value="Enviar">
-            </form>
-        </section>
+         <main class="form-all">
+            <section class="container-form-money">
+                <form action="/Completed" method="post" class="form-money">
+                    
+                    <input type="hidden" name="action" value="withdraw">
+    
+                    <ul>
+                        <li class="form-li">
+                            <input type="number" name="money" id="money" required>
+                            <label class="center" for="money">Dinero a Retirar</label>
+                        </li>
+                        <li class="form-li label-top">
+                            <input class="input-top-left2" type="password" name="password" id="password" required>
+                            <label class="top-left" for="password">Ingrese su contraseña</label>
+                        </li>
+                    </ul>
+    
+                    <input type="submit" id="btn-submit" value="Retirar">
+                </form>
+            </section>
+        </main> 
     </div>
 </body>
 </html>
